# SNT-NSI

./: .gitattributes  .gitignore  README.md
MP2I/: README.md
MP2I/DMs/DM2/: .gitignore  CMakeLists.txt  README.md  main.c  morse_to_dm2.py
MP2I/DMs/DM2/examples/: morse.txt  morse2.txt  morse3.txt  sonata_1_piste.txt  sonata_2_pistes.txt  sonata_une_piste.txt  test2.txt  test3.txt  test4.txt  test5.txt
MP2I/DMs/DM2/examples/nouveau_format/: albeniz.txt  basic_solfege.txt  sbbcffffs.txt  sonata.txt  sonataadsr.txt  tests.txt  testsadsr.txt
MP2I/DMs/DM2/rapport/: build_pdf.sh  clean_tex.py  rapport.lytex  rapport.tex
MP2I/DMs/DM2/src/: constants.h  file_management.c  file_management.h  melody.c  melody.h  new_melody.c  new_melody.h  run_tests.c  run_tests.h  sound.c  sound.h  wav.c  wav.h
MP2I/DMs/DM3/: .gitignore  DM3.tex  Latex.Settings.tex  README.md  calendrier_solution_8_pieces.txt  rapport.md
MP2I/TDs/TD05/: exercice1.c
MP2I/TPs/TP02/: reponses.txt
MP2I/TPs/TP03/: reponses.txt
MP2I/TPs/TP04/: reponses.txt
MP2I/TPs/TP05/: reponses.txt
MP2I/TPs/TP08/: dico_chaine.c  dico_chaine.h  dico_hash.c  dico_hash.h  keyval.c  keyval.h  reponses.txt  test.c
MP2I/TPs/TP09/: exercice1.ml  exercice2.ml  exercice3.ml  exercice4.ml  reponses.txt
MP2I/TPs/TP1/: .gitignore  reponses.txt
MP2I/TPs/TP10/: exercice1.ml  exercice2.ml  exercice3.ml  exercice4.ml  exercice4compat.ml  exercice5.ml  exercice6.ml  reponses.md
MP2I/TPs/TP11/: exercice1.ml  exercice3.ml
MP2I/TPs/TP12/: abr.ml  arbres_rouge_noir.ml  (+3 more)
MP2I/ocaml/: revisions.ml
NSI/HTML/: index.html
(+459 files in other folders)
